--- a/tools/MAME/ui.ini
+++ b/tools/MAME/ui.ini
@@ -31,9 +31,9 @@ forced4x3                 1
 use_background            1
 skip_biosmenu             0
 skip_partsmenu            0
-last_used_filter          Unfiltered
+last_used_filter          
 last_right_panel          0
-last_used_machine         88games
+last_used_machine         
 info_audit_enabled        0
 hide_romless              1
 
