--- a/tools/MAME/puzzledp.ini
+++ b/tools/MAME/puzzledp.ini
@@ -181,7 +181,7 @@ drc                       1
 drc_use_c                 0
 drc_log_uml               0
 drc_log_native            0
-bios                      
+bios                      6
 cheat                     0
 skip_gameinfo             0
 uifont                    default
@@ -252,7 +252,7 @@ bench                     0
 #
 video                     auto
 numscreens                1
-window                    0
+window                    1
 maximize                  1
 waitvsync                 0
 syncrefresh               0
@@ -290,7 +290,7 @@ switchres                 0
 #
 # OSD ACCELERATED VIDEO OPTIONS
 #
-filter                    1
+filter                    0
 prescale                  1
 
 #
