added bios files for AES + some cleaning in project files and makefile

--- a/tools/MAME/ui.ini
+++ b/tools/MAME/ui.ini
@@ -33,7 +33,7 @@ skip_biosmenu             0
 skip_partsmenu            0
 last_used_filter          Available
 last_right_panel          0
-last_used_machine         aes
+last_used_machine         puzzledp
 info_audit_enabled        0
 hide_romless              1
 
